logo and topbar fix

--- a/ecommerce/main/templates/main/base_files/base.html
+++ b/ecommerce/main/templates/main/base_files/base.html
@@ -15,27 +15,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title%} Welcome - {% endblock %}</title>
     <base />
-    <link href="{% static 'vendors/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen" />
-    <link href="{% static 'vendors/jquery/swiper/css/swiper.min.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'vendors/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
-    <link href="{% static 'vendors/ionicons/css/ionicons.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'main/vendors/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen" />
+    <link href="{% static 'main/vendors/jquery/swiper/css/swiper.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'main/vendors/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'main/vendors/ionicons/css/ionicons.css' %}" rel="stylesheet" type="text/css" />
     <!-- use for ostromi -->
 
     <!-- end icon font -->
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/stylesheet.css' %}" rel="stylesheet">
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/plaza/header/header2.css' %}" rel="stylesheet">
-    <link href="{% static 'theme/tt_ostromi2/stylesheet/plaza/theme.css' %} " rel="stylesheet">
-    <script src="{% static 'vendors/jquery/jquery-2.1.1.min.js' %}"></script>
-    <script src="{% static 'vendors/jquery/swiper/js/swiper.min.js' %}"></script>
-    <script src="{%static 'vendors/plaza/ultimatemenu/menu.js' %}"></script>
-    <script src="{%static 'vendors/plaza/newsletter/mail.js' %}"></script>
-    <script src="{%static 'vendors/common.js' %}"></script>
-    <link href="{%static 'image/catalog/cart.png' %}" rel="icon" />
+    <link href="{% static 'main/theme/tt_ostromi2/stylesheet/stylesheet.css' %}" rel="stylesheet">
+    <link href="{% static 'main/theme/tt_ostromi2/stylesheet/plaza/header/header2.css' %}" rel="stylesheet">
+    <link href="{% static 'main/theme/tt_ostromi2/stylesheet/plaza/theme.css' %} " rel="stylesheet">
+    <script src="{% static 'main/vendors/jquery/jquery-2.1.1.min.js' %}"></script>
+    <script src="{% static 'main/vendors/jquery/swiper/js/swiper.min.js' %}"></script>
+    <script src="{%static 'main/vendors/plaza/ultimatemenu/menu.js' %}"></script>
+    <script src="{%static 'main/vendors/plaza/newsletter/mail.js' %}"></script>
+    <script src="{%static 'main/vendors/common.js' %}"></script>
+    <link href="{%static 'main/image/catalog/cart.png' %}" rel="icon" />
     <!-- Quick view -->
-    <script src="{%static 'vendors/plaza/cloudzoom/cloud-zoom.1.0.2.min.js' %}"></script>
-    <script src="{%static 'vendors/plaza/cloudzoom/zoom.js' %}"></script>
-    <script src="{%static 'vendors/plaza/quickview/quickview.js' %}"></script>
-    <link href="{%static 'theme/tt_ostromi2/stylesheet/plaza/quickview/quickview.css' %}" rel="stylesheet"
+    <script src="{%static 'main/vendors/plaza/cloudzoom/cloud-zoom.1.0.2.min.js' %}"></script>
+    <script src="{%static 'main/vendors/plaza/cloudzoom/zoom.js' %}"></script>
+    <script src="{%static 'main/vendors/plaza/quickview/quickview.js' %}"></script>
+    <link href="{%static 'main/theme/tt_ostromi2/stylesheet/plaza/quickview/quickview.css' %}" rel="stylesheet"
         type="text/css" />
     <!-- General -->
     <!-- Sticky Menu -->
