--- a/ecommerce/main/templates/main/index.html
+++ b/ecommerce/main/templates/main/index.html
@@ -1,4 +1,6 @@
-{% extends 'main/base_files/base.html' %} {% load static %} {% block content %}
+{% extends 'main/base_files/base.html' %} 
+{% load static %} 
+{% block content %}
 <div class="wrapper">
     <div id="back-top"><i class="ion-chevron-up"></i></div>
     {% include 'main/base_files/topbar.html' %}
