--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -1,8 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -117,19 +115,10 @@
                 <ul class="vertical-menu">
                     <li>
                         <a href="javaScript:void();">
-                            <img src="{% static 'dashboard/images/svg-icon/dashboard.svg' %}" class="img-fluid"
-                                                                                              alt="dashboard"><span>Dashboard</span><i
-                                                                                              class="feather icon-chevron-right pull-right"></i>
+                            <img src="{% static 'dashboard/images/svg-icon/dashboard.svg' %}" class="img-fluid"alt="dashboard"><a href="dashboard-ecommerce.html">Dashboard</a><i class="feather icon-chevron-right pull-right"></i>
                         </a>
-                        <ul class="vertical-submenu">
-                            <li><a href="index.html">CRM</a></li>
-                            <li><a href="dashboard-ecommerce.html">eCommerce</a></li>
-                            <li><a href="dashboard-hospital.html">Hospital</a></li>
-                            <li><a href="dashboard-crypto.html">Crypto</a></li>
-                            <li><a href="dashboard-school.html">School</a></li>
-                        </ul>
-                    </li>
-                    <li>
+                       
+                    
                         <a href="javaScript:void();">
                             <img src="{%static 'dashboard/images/svg-icon/basic.svg'%}" class="img-fluid"
                                                                                         alt="basic"><span>Basic
@@ -584,7 +573,7 @@
         {% endblock %}
         <div class="footerbar">
             <footer class="footer">
-                <p class="mb-0">© 2020 Orbiter - All Rights Reserved.</p>
+                <p class="mb-0">© 2020 Kamal Traders - All Rights Reserved.</p>
             </footer>
         </div>
         <!-- End Footerbar -->
