--- a/ecommerce/dashboard/templates/dashboard/user-login.html
+++ b/ecommerce/dashboard/templates/dashboard/user-login.html
@@ -46,16 +46,9 @@
                                 <button type="submit" class="btn btn-success btn-lg btn-block font-18">Log
                                     in</button>
                             </form>
-                            <div class="login-or">
-                                <h6 class="text-muted">OR</h6>
-                            </div>
-                            <div class="social-login text-center">
-                                <button type="submit" class="btn btn-primary-rgba font-18"><i
-                                        class="mdi mdi-facebook mr-2"></i>Facebook</button>
-                                <button type="submit" class="btn btn-danger-rgba font-18"><i
-                                        class="mdi mdi-google mr-2"></i>Google</button>
-                            </div>
-                            <p class="mb-0 mt-3">Don't have a account? <a href="user-register.html">Sign up</a>
+                            
+                            
+                            <p class="mb-0 mt-3">Don't have a account? <a href="tel:9804385646">Contact Admin</a>
                             </p>
                         </div>
                     </div>
