--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -104,7 +104,7 @@
         <div class="sidebar">
             <!-- Start Logobar -->
             <div class="logobar">
-                <a href="index.html" class="logo logo-large"><img src="{%static 'dashboard/images/logo.svg'%}"
+                <a href="index.html" class="logo logo-large"><img src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}"
                                                                   class="img-fluid" alt="logo"></a>
                 <a href="index.html" class="logo logo-small"><img src="{%static 'dashboard/images/small_logo.svg'%}"
                                                                   class="img-fluid" alt="logo"></a>
