base file modified

--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -9,7 +9,7 @@
         content="admin, admin panel, admin template, admin dashboard, responsive, bootstrap 4, ui kits, ecommerce, web app, crm, cms, html, sass support, scss">
     <meta name="author" content="Themesbox">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>{% block title %} Welcome-boss {% endblock %}</title>
+    <title>{% block title %}Dashboard-Kamal Traders {% endblock %}</title>
     <!-- Fevicon -->
     <link rel="shortcut icon" href="{% static 'dashboard/images/favicon.ico' %}">
     <!-- Start css -->
