fornt end clean

--- a/ecommerce/main/templates/main/base_files/footer.html
+++ b/ecommerce/main/templates/main/base_files/footer.html
@@ -51,16 +51,16 @@
                                     <a href="#" class="logo-footer"><img
                                             src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}" alt="logo-footer"></a>
                                     <div class="phone">
-                                        <p>Call Us toll Free</p>
-                                        <h4>(+123) 456 789 or (+123) 666 888</h4>
+                                        <p>Call Us</p>
+                                        <h4>9800000000</h4>
                                     </div>
                                     <div class="address">
                                         <label>Contact info:</label>
-                                        <p>169-C, Technohud, Dubai Silicon Oasis, New Yorks City, USA</p>
+                                        <p>Birtamode,Jhapa</p>
                                     </div>
                                     <div class="email">
                                         <label>Email:</label>
-                                        <p>support@plazathemes.com - contact@yourcompany.com</p>
+                                        <p>kamaltraders@gmail.com</p>
                                     </div>
                                 </div>
 
@@ -132,7 +132,7 @@
                     service. We've been delivering best bang for your buck for over 10 years, every item we
                     stock is carefully selected to ensure we offer you top quality at competitive prices.</p>
                 <div class="payment">
-                    <img src="{% static 'image/catalog/ptblock/payment.png' %}" alt="payment">
+                    <img src="{% static 'main/image/catalog/play.png' %}" height="70px" alt="Download App">
                 </div>
 
 
@@ -142,8 +142,8 @@
     <div class="footer-copyright">
         <div class="container">
             <div class="inner">
-                <p class="text-powered">Powered By <a href="../plazathemes.com/index.html">Plazathemes</a>.
-                    Store 2 &copy; 2021</p>
+                <p class="text-powered">Powered By <a href="#">ING GROUP</a>.
+                 &copy; 2021/2022</p>
             </div>
         </div>
     </div>
