--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -115,24 +115,13 @@
                 <ul class="vertical-menu">
                     <li>
                         <a href="javaScript:void();">
-                            <img src="{% static 'dashboard/images/svg-icon/dashboard.svg' %}" class="img-fluid"alt="dashboard" active><a href="dashboard-ecommerce.html">Dashboard</a>
-                        </a>
-                       
-                    
-                    
-                        
-                    </li>
-                    
-                   
-                    
-                  
-                 
-                    
-                    
-                            <li><a href="ecommerce-product-list.html">Product List</a></li>
-                            <li><a href="ecommerce-product-detail.html">Product Detail</a></li>
-                            <li><a href="ecommerce-order-list.html">Order List</a></li>
-                            <li><a href="ecommerce-order-detail.html">Order Detail</a></li>
+                            <a href="{% url 'dashboard' %}">Dashboard</a>
+                        </a>   
+                    </li>                    
+                            <li><a href="{% url 'product' %}">Product List</a></li>
+                            <li><a href="{% url 'details' %}">Product Detail</a></li>
+                            <li><a href="{% url 'order' %}">Order List</a></li>
+                            <li><a href="{% url 'orderdetails' %}">Order Detail</a></li>
                             <li><a href="ecommerce-shop.html">Shop</a></li>
                             <li><a href="ecommerce-single-product.html">Single Product</a></li>
                             <li><a href="ecommerce-cart.html">Cart</a></li>
