--- a/ecommerce/main/templates/main/base_files/topbar.html
+++ b/ecommerce/main/templates/main/base_files/topbar.html
@@ -10,21 +10,25 @@
             <ul class="box-top box-top-right pull-right">
                     <li class="currency">
                             <div class="btn-group">
-                               <a href="https://play.google.com/"> <img src="{% static 'main/image/catalog/play.png' %}" height="50px" alt="Download App">
+                               <a href="#"> <img src="{% static 'main/image/catalog/play.png' %}" height="50px" alt="Download App">
                            </a> </div>
 
                     </li>
+                    <li id="top-links" class="nav header-dropdown">
+                        <ul class="list-inline">
+                            <li class="dropdown"><a href="account-login.html?route=account/account" title="My Account"
+                                    class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span
+                                        class="hidden-xs hidden-sm">My Account</span>
+                                    <i class="icon-right ion-ios-arrow-down"></i></a>
+                                <ul class="dropdown-menu dropdown-menu-right pt-account">
+                                    <li><a id="pt-register-link"
+                                            href="index5502.html?route=account/register">Register</a></li>
+                                    <li><a id="pt-login-link" href="{% url 'login' %}">Login</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 
-                <li id="top-links" class="nav header-dropdown">
-                    <ul class="list-inline">
-                        <li class="dropdown"><a href="{% url 'login' %}" title="My Account" class="dropdown-toggle" data-toggle="dropdown"><i
-                                        class="fa fa-user"></i> <span class="hidden-xs hidden-sm">My Account</span>
-                                        <i class="icon-right ion-ios-arrow-down"></i></a>
-                          
-                        </li>
-                          
-                    </ul>
-                </li>
             </ul>
         </div>
     </div>
