--- a/ecommerce/dashboard/templates/dashboard/ecommerce-product-detail.html
+++ b/ecommerce/dashboard/templates/dashboard/ecommerce-product-detail.html
@@ -7,123 +7,88 @@
                 <div class="row">
                     <!-- Start col -->
                     <div class="col-lg-8 col-xl-9">
-                        <div class="card m-b-30">
-                            <div class="card-header">
-                                <h5 class="card-title">Product Detail</h5>
-                            </div>
-                            <div class="card-body">
-                                <form>
-                                    <div class="form-group row">
-                                        <label for="productTitle" class="col-sm-12 col-form-label">Product Title</label>
-                                        <div class="col-sm-12">
-                                            <input type="text" class="form-control font-20" id="productTitle" placeholder="Title">
-                                        </div>
-                                    </div>                                     
-                                    <div class="form-group row">
-                                        <label class="col-sm-12 col-form-label">Description</label>
-                                        <div class="col-sm-12">
-                                            <div class="summernote">This is demo product.</div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                        <div class="card m-b-30">
-                            <div class="card-header">
-                                <h5 class="card-title">Other Detail</h5>
-                            </div>
-                        </div>
+                       
+                       
                         <div class="row">
-                            <div class="col-lg-12 col-xl-4">
+                            <div class="col-lg-12 col-xl-12 ">
                                 <div class="card m-b-30">
-                                    <div class="card-body">
-                                        <div class="nav flex-column nav-pills" id="v-pills-product-tab" role="tablist" aria-orientation="vertical">
-                                            <a class="nav-link mb-2 active" id="v-pills-general-tab" data-toggle="pill" href="#v-pills-general" role="tab" aria-controls="v-pills-general" aria-selected="true"><i class="feather icon-feather mr-2"></i>General</a>
-                                            <a class="nav-link mb-2" id="v-pills-stock-tab" data-toggle="pill" href="#v-pills-stock" role="tab" aria-controls="v-pills-stock" aria-selected="false"><i class="feather icon-box mr-2"></i>Stock</a>
-                                            <a class="nav-link mb-2" id="v-pills-shipping-tab" data-toggle="pill" href="#v-pills-shipping" role="tab" aria-controls="v-pills-shipping" aria-selected="false"><i class="feather icon-truck mr-2"></i>Shipping</a>
-                                            <a class="nav-link mb-2" id="v-pills-advanced-tab" data-toggle="pill" href="#v-pills-advanced" role="tab" aria-controls="v-pills-advanced" aria-selected="false"><i class="feather icon-settings mr-2"></i>Advanced</a>
+                                    <div class="card-header">                                
+                                        <div class="row align-items-center">
+                                            <div class="col-7">
+                                                <h5 class="card-title mb-0">Product ID : #986953</h5>
+                                            </div>
+                                            <div class="col-5 text-right">
+                                                <span class="badge badge-success-inverse">In Stock</span>                                             
+                                            </div>
                                         </div>
                                     </div>
+                                    <div class="card-body">                                
+                                        <div class="row mb-5">
+                                            <div class="col-md-6 col-lg-6 col-xl-3">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Product Placed</h6>
+                                                <p class="mb-0">16/06/2019</p>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-lg-6 col-xl-3">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Name</h6>
+                                                <p class="mb-0">Mac Book Air</p>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-lg-6 col-xl-3">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Brand </h6>
+                                                <p class="mb-0">Apple</p>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-lg-6 col-xl-3">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Quantity</h6>
+                                                <p class="mb-0">500 PCs</p>
+                                                </div>
+                                            </div>
+                                        </div> 
+                                        <div class="row">
+                                            <div class="col-md-6 col-lg-6 col-xl-6 ">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Specification <a href="#" class="badge badge-primary-inverse">Edit</a></h6>
+                                                <p>MacBook Pro Technical Specifications. Finish. Silver Space Gray. Display. Retina display. Chip. Apple M1 chip. Battery and Power 1. Up to 17 hours wireless web. Memory. 8GB. Charging and Expansion. Two Thunderbolt / USB 4 ports with support for: Keyboard and Trackpad. Backlit Magic Keyboard with: Wireless. Wi‑Fi.
+                                                </p>
+                                              
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-lg-6 col-xl-6 ">
+                                                <div class="order-primary-detail mb-4">
+                                                <h6>Description <a href="#" class="badge badge-primary-inverse">Edit</a></h6>
+                                                <p>MacBook Pro Technical Specifications. 13.3-inch (diagonal) LED-backlit display with IPS technology; 2560-by-1600 native resolution at 227 pixels per inch with support for millions of colors. Supported scaled resolutions: 1680 by 1050. 1440 by 900. 1024 by 640. 500 nits brightness. Wide color (P3) True Tone technology.</p>
+                                             
+                                                </div>
+                                            </div>
+                                        </div>                                
+                                    </div>
+                                </div> 
+                            </div>
+                            <div class="col-lg-12 col-xl-12">
+                                <div class="card m-b-30">
+                                <div class="card-header">
+                                    <h5 class="card-title">Product Image Gallery</h5>
+                                </div>
+                                <div class="card-body">
+                                    <div class="d-inline-block mb-1">
+                                        <img src="{% static 'dashboard/images/ecommerce/product_gallery_01.jpg' %}" alt="Rounded Image" class="img-fluid rounded">
+                                    </div>
+                                    <div class="d-inline-block mb-1">
+                                        <img src="{% static 'dashboard/images/ecommerce/product_gallery_02.jpg' %}" alt="Rounded Image" class="img-fluid rounded">
+                                    </div>
+                                    <div class="d-inline-block mb-1">
+                                        <img src="{% static 'dashboard/images/ecommerce/product_gallery_03.jpg' %}" alt="Rounded Image" class="img-fluid rounded">
+                                    </div>                                
+                                </div>
+                                <div class="card-footer">
+                                    <button type="button" class="btn btn-primary-rgba btn-lg btn-block">Add Gallery</button>
                                 </div>
                             </div>
-                            <div class="col-lg-12 col-xl-8">
-                                <div class="card m-b-30">
-                                    <div class="card-body">
-                                        <div class="tab-content" id="v-pills-product-tabContent">
-                                            <div class="tab-pane fade show active" id="v-pills-general" role="tabpanel" aria-labelledby="v-pills-general-tab">
-                                                <form>
-                                                    <div class="form-group row">
-                                                        <label for="regularPrice" class="col-sm-4 col-form-label">Price($)</label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" id="regularPrice" placeholder="100">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row mb-0">
-                                                        <label for="salePrice" class="col-sm-4 col-form-label">Sale Price($)</label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" id="salePrice" placeholder="50">
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <div class="tab-pane fade" id="v-pills-stock" role="tabpanel" aria-labelledby="v-pills-stock-tab">
-                                                <form>
-                                                    <div class="form-group row">
-                                                        <label for="sku" class="col-sm-4 col-form-label">SKU</label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" id="sku" placeholder="SKU001">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row">
-                                                        <label for="stockStatus" class="col-sm-4 col-form-label">Stock Status</label>
-                                                        <div class="col-sm-8">
-                                                            <select class="form-control" id="stockStatus">
-                                                                <option value="instock">In Stock</option>
-                                                                <option value="outofstock">Out of Stock</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row mb-0">
-                                                        <label for="stockQuantity" class="col-sm-4 col-form-label">Quantity</label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" id="stockQuantity" placeholder="100">
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <div class="tab-pane fade" id="v-pills-shipping" role="tabpanel" aria-labelledby="v-pills-shipping-tab">
-                                                <form>
-                                                    <div class="form-group row">
-                                                        <label for="weight" class="col-sm-4 col-form-label">Weight(kg)</label>
-                                                        <div class="col-sm-8">
-                                                            <input type="text" class="form-control" id="weight" placeholder="0">
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-group row mb-0">
-                                                        <label for="shippingClass" class="col-sm-4 col-form-label">Shipping Class</label>
-                                                        <div class="col-sm-8">
-                                                            <select class="form-control" id="shippingClass">
-                                                                <option value="noshipping">No Shipping</option>
-                                                                <option value="freeshipping">Free Shipping</option>
-                                                                <option value="fixedshiping">Fixed Shipping</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                            <div class="tab-pane fade" id="v-pills-advanced" role="tabpanel" aria-labelledby="v-pills-advanced-tab">
-                                                <form>
-                                                    <div class="form-group row mb-0">
-                                                        <label for="purchaseNote" class="col-sm-3 col-form-label">Purchase note</label>
-                                                        <div class="col-sm-9">
-                                                            <textarea class="form-control" name="purchaseNote" id="purchaseNote" rows="3" placeholder="Purchase note"></textarea>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
                         </div>                  
                     </div>
@@ -224,25 +189,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card m-b-30">
-                            <div class="card-header">
-                                <h5 class="card-title">Product Image Gallery</h5>
-                            </div>
-                            <div class="card-body">
-                                <div class="d-inline-block mb-1">
-                                    <img src="assets/images/ecommerce/product_gallery_01.jpg" alt="Rounded Image" class="img-fluid rounded">
-                                </div>
-                                <div class="d-inline-block mb-1">
-                                    <img src="assets/images/ecommerce/product_gallery_02.jpg" alt="Rounded Image" class="img-fluid rounded">
-                                </div>
-                                <div class="d-inline-block mb-1">
-                                    <img src="assets/images/ecommerce/product_gallery_03.jpg" alt="Rounded Image" class="img-fluid rounded">
-                                </div>                                
-                            </div>
-                            <div class="card-footer">
-                                <button type="button" class="btn btn-primary-rgba btn-lg btn-block">Add Gallery</button>
-                            </div>
-                        </div>
+                        
                     </div>
                     <!-- End col -->
                 </div>
