--- a/ecommerce/dashboard/templates/dashboard/ecommerce-product-list.html
+++ b/ecommerce/dashboard/templates/dashboard/ecommerce-product-list.html
@@ -29,7 +29,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table class="table table-borderless">
+                                    <table class="table table-striped table-bordered">
                                         <thead>
                                             <tr>
                                                 <th>ID</th>
