--- a/ecommerce/main/templates/main/base_files/topbar.html
+++ b/ecommerce/main/templates/main/base_files/topbar.html
@@ -16,19 +16,14 @@
                     </li>
                     <li id="top-links" class="nav header-dropdown">
                         <ul class="list-inline">
-                            <li class="dropdown"><a href="account-login.html?route=account/account" title="My Account"
+                            <li class="dropdown"><a href="{% url 'login' %}" title="My Account"
                                     class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <span
                                         class="hidden-xs hidden-sm">My Account</span>
-                                    <i class="icon-right ion-ios-arrow-down"></i></a>
-                                <ul class="dropdown-menu dropdown-menu-right pt-account">
-                                    <li><a id="pt-register-link"
-                                            href="index5502.html?route=account/register">Register</a></li>
-                                    <li><a id="pt-login-link" href="{% url 'login' %}">Login</a></li>
-                                </ul>
+                                   </a>
+                               
                             </li>
                         </ul>
                     </li>
-                
             </ul>
         </div>
     </div>
