--- a/ecommerce/dashboard/templates/dashboard/base_files/base.html
+++ b/ecommerce/dashboard/templates/dashboard/base_files/base.html
@@ -27,6 +27,8 @@
     <link href="{% static 'dashboard/css/flag-icon.min.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'dashboard/css/style.css' %}" rel="stylesheet" type="text/css">
     <!-- End css -->
+    <!--Ckeditor or classic editor-->
+    <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
 </head>
 
 <body class="vertical-layout">
@@ -327,7 +329,7 @@
                 </div>
                 <div class="col-md-4 col-lg-4">
                     <div class="widgetbar">
-                        <button class="btn btn-primary-rgba"><i class="feather icon-plus mr-2"></i>Add</button>
+                        <button class="btn btn-primary-rgba badge"><a href="{% url 'addproduct' %}" ><i class="feather icon-plus mr-2"></i>Add</a></button>
                     </div>                        
                 </div>
             </div>          
